--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 h1,
@@ -13,18 +13,18 @@ h2,
 h3,
 h4 {
   color: #ffd600;
-  font-family: 'Ropa Sans', sans-serif;
+  font-family: "Ropa Sans", sans-serif;
 }
 
 .container {
   background-color: #424242;
-  height: 100vh;
+  min-height: 140vh;
   max-width: 1000px;
   margin: auto;
 }
 
 header {
-  background-image: url('../assets/sw-header.jpg');
+  background-image: url("../assets/sw-header.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -50,6 +50,9 @@ main {
   width: 22rem;
   height: 28rem;
   margin-top: -2rem;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  position: relative;
 }
 
 .card h4 {
@@ -60,11 +63,37 @@ main {
 
 .character-card h4 {
   background-color: #535556;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .character-card li {
   letter-spacing: 0.15em;
   padding: 8px 10px;
+}
+
+.character-card li:nth-child(odd) {
+  background-color: #8e8e8e;
+  color: white;
+}
+
+.character-card li:nth-child(even) {
+  background-color: #e1dede;
+}
+
+.character-card li:hover,
+.character-card li:focus {
+  cursor: pointer;
+  background-color: #444;
+  color: white;
+}
+
+.focus-arrow {
+  display: none;
+}
+
+.visible {
+  display: inline;
 }
 
 .details-card li {
@@ -74,11 +103,13 @@ main {
 
 .character-details,
 .planet-details {
-  flex: 1 1 100%;
+  flex-basis: 100%;
 }
 
 .details-card h4 {
   background-color: #748687;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 ul {
@@ -88,12 +119,148 @@ ul {
 .pag-nav {
   display: flex;
   align-items: flex-end;
+  margin-top: auto;
+  padding-bottom: 10px;
+  justify-content: center;
 }
 
+span {
+  margin: 1rem;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  cursor: pointer;
+}
 .character-details__list {
   background-color: #c4c4c4;
+  height: 100%;
+  padding: 10px;
+  position: relative;
 }
 
 .planet-details__list {
   background-color: #8e8e8e;
+  color: white;
+  height: 100%;
+  padding: 10px;
+  position: relative;
+}
+
+.character-details__list li,
+.planet-details__list li {
+  padding-bottom: 5px;
+}
+
+.details-card li.details-name {
+  font-size: 1.2rem;
+}
+
+.character-list {
+  position: relative;
+  min-height: 75%;
+}
+
+/*Loader*/
+.loader-grey-characters {
+  display: none;
+  border: 5px solid #c4c4c4;
+  border-radius: 50%;
+  border-top: 5px solid #848484;
+  border-left: 5px solid #848484;
+  border-bottom: 5px solid #848484;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  position: absolute;
+  left: 43%;
+  top: 45%;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+.loader-grey {
+  display: none;
+  border: 5px solid #c4c4c4;
+  border-radius: 50%;
+  border-top: 5px solid #848484;
+  border-left: 5px solid #848484;
+  border-bottom: 5px solid #848484;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 40%;
+  left: 43%;
+}
+
+.loader-visible {
+  display: block;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader-white {
+  display: none;
+  border: 5px solid #8e8e8e;
+  border-radius: 50%;
+  border-top: 5px solid #c4c4c4;
+  border-left: 5px solid #c4c4c4;
+  border-bottom: 5px solid #c4c4c4;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 40%;
+  left: 43%;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
